--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="E:\Projects\My Personal Website\Images\ifta.jpg" alt="Ifta Hider Rahman">
+        <img src="Images\ifta.jpg" alt="Ifta Hider Rahman">
         <p>Hi, I'm Ifta! I am a finance graduate. I completed my graduation with a major in Finance from the University of Dhaka. Now I am doing my MBA in Finance at the University of Dhaka. I also work as an Account and Finance Intern in Agronochain. Along with my MBA degree, I am studying Chartered Accountancy.</p>
       </div>
     </div>
