--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ifta Hider Rahman - Personal Website</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/iftahaider.github.io/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -78,6 +78,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/iftahaider.github.io/script.js"></script>
 </body>
 </html>
